# efl

./: TODO.txt  meson.build  meson_options.txt
src/: Makefile_Efl_Mono.am  Makefile_Elementary.am
src/bindings/cxx/ecore_cxx/: meson.build
src/bindings/cxx/eina_cxx/: meson.build
src/bindings/cxx/eo_cxx/: meson.build
src/bindings/mono/efl_mono/: efl_libs.cs.in
src/lib/efl/: Efl.h
src/lib/efl/interfaces/: efl_gfx_stack.eo
src/lib/eina/: eina_array.c  eina_array.h  eina_convert.c
src/lib/eio/: efl_io_manager.eo
src/lib/elementary/: efl_access_context.c  efl_access_context.eo  efl_access_context.h  efl_access_object.c  efl_access_object.eo  efl_access_object.h  efl_access_object2.c  efl_access_object2.eo  efl_access_object2.h  efl_access_provider.eo  efl_access_provider.h  efl_access_relation_set.c  efl_access_relation_set.eo  efl_access_types.eot  efl_ui_bg.c  efl_ui_box.c  efl_ui_list_view.c  efl_ui_relative_layout.c  efl_ui_widget.c  efl_ui_win.c  efl_ui_win.eo  elc_multibuttonentry.c  elm_atspi_app_object.c  elm_box.c  elm_interfaces.h  elm_list.c  elm_menu.c  elm_toolbar.c  meson.build
src/lib/elput/: meson.build
src/lib/eolian_cxx/: meson.build
src/lib/eolian_cxx/grammar/: function_definition.hpp  klass_def.hpp
src/lib/evas/canvas/: efl_canvas_object.eo  efl_canvas_vg_node.c  efl_canvas_vg_node.eo  evas_stack.x
src/tests/efl_mono/: Eo.cs
src/tests/eina/: eina_test_convert.c
src/tests/elementary/: efl_test_access.c  elm_suite.c  elm_suite.h  meson.build
src/tests/emotion/: emotion_test_main-eo.c
